--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,1 +1,6 @@
-
+[theme]
+primaryColor="#6C63FF"
+backgroundColor="#381C17"
+secondaryBackgroundColor="#F0F2F6"
+textColor="#000000"
+font="sans serif"
