--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor="#6C63FF"
+primaryColor="#ED4021"
 backgroundColor="#381C17"
 secondaryBackgroundColor="#F0F2F6"
 textColor="#000000"
